make navbar chevron changeble on hover

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,7 +46,7 @@ div.highlight {
   top: 30px;
 }
 
-.green {  
+.green {
   width: 100%;
   background-color: $light;
   padding-left: 5%;
@@ -80,7 +80,7 @@ img.is-rounded {
 }
 .arrow-image {
   z-index: 10;
-  top: calc(50% - 68px);  
+  top: calc(50% - 68px);
   left: 4vw;
   position: sticky;
   width: 64px;
@@ -537,8 +537,6 @@ footer .columns {
   font-weight: 600;
 }
 
-
-
 // Tool-Tip
 
 .tooltip-popup {
@@ -579,7 +577,7 @@ a:hover .tooltip-popup,
 }
 .input:focus,
 .textarea:focus {
-  //border: 2px solid $primary-dark;  
+  //border: 2px solid $primary-dark;
   border: 3px solid $dark;
   box-shadow: none;
 }
@@ -603,11 +601,11 @@ a:hover .tooltip-popup,
   padding-bottom: 0;
   padding-left: 0;
 }
-.contact .contact-box {  
+.contact .contact-box {
   flex-grow: 0;
   padding-right: 50px;
 }
-.contact-agree{  
+.contact-agree {
   padding-right: 0 !important;
 }
 .select:not(.is-multiple):not(.is-loading)::after {
@@ -653,7 +651,6 @@ a:hover .tooltip-popup,
   box-shadow: inset 0px 0px 0px 4px #fff;
   background-color: $primary-dark;
 }
-
 
 // newss
 .news {
@@ -708,36 +705,41 @@ a:hover .tooltip-popup,
 // Mobil
 
 @include mobile {
-  body, .highlighter {
+  body,
+  .highlighter {
     font-size: 0.9rem;
     line-height: 1.5rem;
-}
-.arrow-image {
-  display: none;
-}
-h1, h2, h3, p {
-  padding-bottom: 0px;
-}
+  }
+  .arrow-image {
+    display: none;
+  }
+  h1,
+  h2,
+  h3,
+  p {
+    padding-bottom: 0px;
+  }
   h1,
   h1 p {
     font-size: 1.875rem; //30px
   }
   .home .hero-body h1 {
     max-width: none;
-}
-.subtitle {  
-  padding: 35px;
-  padding-top: 0;
-}
-.title.is-1 {
-  font-size: 1.3rem;
-  font-weight: 600;
-}
-.subtitle.is-4 {
-  font-size: 1.1rem;
-}
+  }
+  .subtitle {
+    padding: 35px;
+    padding-top: 0;
+  }
+  .title.is-1 {
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
+  .subtitle.is-4 {
+    font-size: 1.1rem;
+  }
   h2,
-  h2 p, .highlighter h2 {
+  h2 p,
+  .highlighter h2 {
     font-size: 1.2rem;
   }
 
@@ -756,41 +758,42 @@ h1, h2, h3, p {
   .navbar {
     padding-top: 0.6rem;
     padding-bottom: 0.6rem;
-}
+  }
   .navbar-brand img {
     margin: 1rem;
-}
-.hero.is-primary .title {
-  padding-top: 35px;
-}
-.navbar-menu .button.is-dark { 
-  background-color: transparent;
-  border-radius: 0;
-  width: 100vw;
-}
-.navbar-menu {
-  background-color: transparent;
-}
-a.navbar-link {
-  background-color: $primary-dark;
-}
-a.navbar-item {
-  background-color: $primary-dark !important;
-  margin-left: 50px;
-}
-.navbar-item, .navbar-link {
-  color: #fff;
-  display: block;
-  line-height: 2.5;
-  padding: 0.9rem;
-  position: relative;
-}
-.navbar-link:not(.is-arrowless)::after {
-  border-color: #fff;
-}
-.navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
-  background-color: #09443e !important;
-}
+  }
+  .hero.is-primary .title {
+    padding-top: 35px;
+  }
+  .navbar-menu .button.is-dark {
+    background-color: transparent;
+    border-radius: 0;
+    width: 100vw;
+  }
+  .navbar-menu {
+    background-color: transparent;
+  }
+  a.navbar-link {
+    background-color: $primary-dark;
+  }
+  a.navbar-item {
+    background-color: $primary-dark !important;
+    margin-left: 50px;
+  }
+  .navbar-item,
+  .navbar-link {
+    color: #fff;
+    display: block;
+    line-height: 2.5;
+    padding: 0.9rem;
+    position: relative;
+  }
+  .navbar-link:not(.is-arrowless)::after {
+    border-color: #fff;
+  }
+  .navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
+    background-color: #09443e !important;
+  }
   .button {
     height: auto;
   }
@@ -799,14 +802,15 @@ a.navbar-item {
     font-size: 0.8rem !important;
     font-weight: 600;
   }
-.navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
+  .navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
     background-color: #09443e;
     color: #fff;
-}
-  .buttons {
-   // display: table-caption;
   }
-  .hero-body .button, .content-wrapper .button {
+  .buttons {
+    // display: table-caption;
+  }
+  .hero-body .button,
+  .content-wrapper .button {
     padding: 0.5rem !important;
   }
   .hero.is-medium .hero-body {
@@ -816,15 +820,17 @@ a.navbar-item {
     // Buttongröße aus Figma
     height: auto;
   }
-  .story-slider, .content-wrapper img {
+  .story-slider,
+  .content-wrapper img {
     border-radius: 25px !important;
-}
-.column.slider-image img {  
-  border-top-right-radius: 25px !important;
-  border-bottom-left-radius: 0 !important;
-  border-bottom-right-radius: 0 !important;
-}
-  .slider-navigation-next, .slider-navigation-previous {
+  }
+  .column.slider-image img {
+    border-top-right-radius: 25px !important;
+    border-bottom-left-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+  }
+  .slider-navigation-next,
+  .slider-navigation-previous {
     top: 100% !important;
     width: 20px !important;
     height: 20px !important;
@@ -833,29 +839,29 @@ a.navbar-item {
   }
   .card-content p {
     padding-left: 3rem;
-}
-.card {
-  margin-top: 0;
-}
-.card-content {
-  padding: 2.5rem;
-}
-.left.card-image {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-.right.card-image {
-  padding-bottom: 2.5rem;
-}
-.columns {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-}
-.two-columns p {
-  column-count: 1;
-  column-gap: 1rem;
-}
+  }
+  .card {
+    margin-top: 0;
+  }
+  .card-content {
+    padding: 2.5rem;
+  }
+  .left.card-image {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+  .right.card-image {
+    padding-bottom: 2.5rem;
+  }
+  .columns {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+  }
+  .two-columns p {
+    column-count: 1;
+    column-gap: 1rem;
+  }
   .footer-logos .column {
     text-align: left !important;
   }
