fix navbar coloring

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -161,7 +161,17 @@ a .tooltip-popup {
 .navbar-link {
   background-color: transparent;
 }
-
+a.navbar-item:focus,
+a.navbar-item:focus-within,
+a.navbar-item:hover,
+a.navbar-item.is-active,
+.navbar-link:focus,
+.navbar-link:focus-within,
+.navbar-link:hover,
+.navbar-link.is-active {
+  background-color: $primary-dark;
+  color: white;
+}
 .button.is-rounded {
   padding-right: 0em !important;
 }
