--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,8 +18,13 @@
                 {% if item.dropdown %}
                 <div
                     class="navbar-item has-text-left button is-rounded is-dark has-dropdown is-hoverable {% if site.fixed_navbar == 'bottom' %} has-dropdown-up {% endif %} {% for subitem in item.dropdown %} {% if subitem.link == page.url %} is-active-header {% endif %} {% endfor %}">
-                    <a href="{{ item.link | relative_url }}"
+                    
+                    {% if item.selectable %}
+                      <a href="{{ item.link | relative_url }}"
                         class="navbar-link {% if item.link == page.url %} is-active {% endif %}">{{ item.name }}</a>
+                    {% else %}
+                     <a for="navbar-click" class="navbar-link">{{ item.name }}</a>
+                    {% endif %}
                     <div class="navbar-dropdown">
                         {% for subitem in item.dropdown %}
                         <a href="{{ subitem.link | relative_url }}"
@@ -30,7 +35,7 @@
                 </div>
                 {% else %}
                 <a href="{{ item.link | relative_url }}"
-                    class="navbar-item button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">{{ item.name }}</a>
+                    class="navbar-item has-text-left button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">{{ item.name }}</a>
                 {% endif %}
                 {% endfor %}
                 {% endif %}
