new tag to hide elements so theres no need to del stuff thats needed in the future

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -78,6 +78,9 @@ div.highlight {
 img.is-rounded {
   border-radius: 65px;
 }
+.hidden {
+  display: none;
+}
 .arrow-image {
   z-index: 10;
   top: calc(50% - 68px);
