update dites title

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
         </div>
         <div class="column is-2">
             <div class="title">www.intia.de</div>
-                TH-Köln | DITIS<br>
+                TH-Köln | DITES<br>
                 Campus Südstadt<br>
                 Ubierring 48<br>
                 50678 Köln
