change font link

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,6 +1,6 @@
 // Font
 @charset "utf-8";
-@import url("https://fonts.googleapis.com/css?family=Verdana");
+@import url(//fonts.googleapis.com/css?family=Verdana);
 $family-primary: "Verdana", sans-serif;
 // Colors
 //$primary: #d1e7d6 !default;
@@ -120,7 +120,7 @@ h5 {
 .navbar-menu .button,
 .navbar-dropdown .button {
   // Buttongröße aus Figma
-  width: 166px;
+  width: 180px;
   height: 47px;
 }
 
