update bmbf logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,8 +58,7 @@
                 <img src="{{ site.baseurl }}/assets/img/logos/INTIA_Plattform_Logos_Dites_weiss.png">
             </div></div>
             <div class="column has-text-left"><div class="page-sponsor">                
-                <p class="has-text-left">Gefördert von</p>
-                <img src="{{ site.baseurl }}/assets/img/logos/INTIA_Plattform_Logos_BMBF_weiss.png">
+                <img class="footer-logo-2" src="{{ site.baseurl }}/assets/img/logos/BMBF_logo.jpg">
             </div></div>
         </div>
         <div class="content is-small has-text-centered">
