--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -485,6 +485,12 @@ figcaption {
   padding-left: 5rem;
   padding-right: 5rem;
 }
+.highlighter img.with-zone {
+  width: 100%;
+  float: none;
+  padding-left: 0;
+  padding-right: 0;
+}
 .highlighter .column {
   margin-right: 4rem;
   padding-top: 2rem;
@@ -534,6 +540,11 @@ figcaption {
 }
 .footer-logos p {
   padding-bottom: 5px;
+}
+.footer-logo-2 {
+  height: 160px !important;
+  max-height: 160px !important;
+  margin: 0px !important;
 }
 .footer .title {
   color: white;
