update buttons in story

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -18,13 +18,13 @@
                 </a>
             {% endif %}
             <div class="buttons-hero has-text-centered">
-                <a  href=""  class="button is-rounded is-dark { % if item.link == page.url % } { % endif % }">
+                <a  onclick="window.history.back()"  class="button is-rounded is-dark { % if item.link == page.url % } { % endif % }">
                     <span class="icon is-small">
                         <i class="fas fa-chevron-left"></i>
                     </span>
                     <span>Zur Übersicht</span>
                 </a>
-                <a  href=""  class="button is-rounded is-dark { % if item.link == page.url % } { % endif % }">
+                <a  onclick="window.print()"  class="button is-rounded is-dark { % if item.link == page.url % } { % endif % }">
                     <span>Als PDF Herunterladen</span>
                     <span class="icon is-small">
                         <i class="fas fa-chevron-right"></i>
