--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -8,7 +8,11 @@
             {% if page.hero_image %}
                 <img src="{{page.hero_image}}" alt="placeholder"  class="is-rounded is-hidden-mobile">
             {% endif %}
-            <p class="subtitle is-4">{{ page.subtitle }}</p>
+            {% if page.subtitle_markdownify %} 
+                <p class="subtitle is-4">{{ page.subtitle | markdownify }}</p>
+            {% else %}
+                <p class="subtitle is-4">{{ page.subtitle }}</p>
+            {% endif %}
             {% if page.hero_link %}
                 <a href="{{ page.hero_link | relative_url }}" class="button is-rounded is-dark">
                     <span>{{ page.hero_link_text }}</span>
