--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -234,8 +234,13 @@ a.navbar-item.is-active,
 }
 //// Hero sub-pages with green text
 .subpage h1,
-.subpage p {
+.subpage p,
+.subpage ul {
   color: $primary-dark !important;
+}
+.subpage ul {
+  list-style-type: disc;
+  padding-left: 1em;
 }
 .subpage .hero-body img,
 .toppage .hero-body img {
