--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -88,7 +88,10 @@ h4 {
 h5 {
   font-size: 0.83rem;
 }
-
+ul {
+  list-style-type: disc;
+  padding-left: 1em;
+}
 // Button Animation + Gleiche Breite
 .button {
   // Schrifft
