--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
   <div class="container contact">
     <h1>{{ site.data.contact.title  }}</h1>
     {{ site.data.contact.introduction  }}
-    <form action="{{ site.data.contact.action }}"  class="columns">
+    <form id="form" action="{{ site.data.contact.action }}"  data-botpoison-public-key="{{ site.data.contact.botpoison_key }}" class="columns">
         <div class="column is-6">
             <div class="field">
                 <label class="label">Vor- und Nachname</label>
@@ -53,10 +53,23 @@
                 
                 <div class="column contact-agree">
                   <label for="agree">{{ site.data.contact.checkbox  }}</label><br><br>
-                  <button class="button is-rounded is-dark" type="submit">Abschicken</button>
+                  <button id="button" class="button is-rounded is-dark" type="submit">Abschicken</button>
                 </div>
               </div>
         </div>
     </form>
+    <script>
+      var formElement = document.getElementById("form");
+      var buttonElement = document.getElementById("button");
+      formElement.addEventListener("botpoison-challenge-start", function () {
+        buttonElement.setAttribute("disabled", "disabled");
+      });
+      formElement.addEventListener("botpoison-challenge-success", function () {
+        buttonElement.removeAttribute("disabled");
+      });
+      formElement.addEventListener("botpoison-challenge-error", function () {
+        buttonElement.removeAttribute("disabled");
+      });
+    </script>
   </div>
 {% endif %}
