--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -1,2 +1,3 @@
 <!-- head scripts -->
+<script src="https://unpkg.com/@botpoison/browser"></script>
 <script type="module" src="{{ site.baseurl }}/assets/js/main.js"async></script>
