correct date in news

--- a/_includes/stories.html
+++ b/_includes/stories.html
@@ -13,7 +13,7 @@
             <div class="news-content column is-half">
                 <div class="media">
                   <div class="media-content">
-                    <h4>{{story.date | date: "%m.%d.%Y"}}</h4>
+                    <h4>{{story.date | date: "%d.%m.%Y"}}</h4>
                     <h2>{{story.title}}</h2>
                   </div>
                 </div>                
