changes vor the highlighter

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -517,11 +517,11 @@ figcaption {
 .highlighter img.with-zone {
   width: 100%;
   float: none;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 30px;
+  padding-right: 30px;  
+  border-radius: 0;
 }
 .highlighter .column {
-  margin-right: 4rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
