--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -517,17 +517,15 @@ figcaption {
 .highlighter img.with-zone {
   width: 100%;
   float: none;
-  padding-left: 30px;
-  padding-right: 30px;  
   border-radius: 0;
 }
 .highlighter .column {
   padding-top: 2rem;
   padding-bottom: 2rem;
+  text-align: center;
 }
 .highlighter .column .button.highlighter-column-button {
   margin-top: 1em;
-  margin-left: 2em;
   float: none;
 }
 
