--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,14 @@ The Default layout that everything is using
         {% else %}
         {% endunless %}
         <div id="main" class="content-wrapper has-background-primary-light">
-            
             {% include story-slider.html %}
             {% include latest-story.html %}
             {% include contact.html %}
             <div class="columns is-centered">
                 <div id="content" class="container column is-10-desktop is-12-tablet">
+                    {% if page.toc %}
+                    {% include toc.html html=content class='menu-list' h_min=1 h_max=1 %}
+                    {% endif %}
                     {{content | markdownify}}
                 </div>
             </div> 
