--- a/_includes/button.html
+++ b/_includes/button.html
@@ -1,5 +1,5 @@
 
-<a href="#" class="button is-rounded is-dark">
+<a href="{{ include.link }}" class="button is-rounded is-dark">
     <span> {{ include.label }} </span>
     <span class="icon is-small">
     <i class="fas fa-chevron-right fa-xs"></i>
