update theme to make it more readable

--- a/_includes/button.html
+++ b/_includes/button.html
@@ -1,7 +1,10 @@
 
 <a href="{{ include.link }}" class="button is-rounded is-dark">
-    <span> {{ include.label }} </span>
-    <span class="icon is-small">
-    <i class="fas fa-chevron-right fa-xs"></i>
-    </span>   
+<span> {{ include.label }} </span>
+    
+{% unless include.no-icon %}
+<span class="icon is-small">
+<i class="fas fa-chevron-right fa-xs"></i>
+</span> 
+{% endunless %}
 </a>
