--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -1,7 +1,7 @@
 {% if page.story_slider %}
     <div class="green">
       <div class="container">
-        <h1 class="slider-titel">Aktuelles</h1>
+        <h1 class="slider-titel">{{ page.story_slider }}</h1>
 
         <div class="carousel">
             {% for story in site.posts limit:5 %}
@@ -24,7 +24,7 @@
                             <div class="content">
                               <p>{{story.subtitle}}</p>
                               <a href="{{ story.url | relative_url }}" class="button is-rounded has-text-centert is-dark {% if item.link == page.url %}is-active{% endif %}">
-                                  <span>Mehr lesen</span>
+                                  <span>{{ page.story_slider_button | default:"Read more" }}</span>
                                   <span class="icon is-small">
                                   <i class="fas fa-chevron-right fa-xs"></i>
                                   </span>
