--- a/_includes/glossary.html
+++ b/_includes/glossary.html
@@ -6,7 +6,7 @@
 {{entry.abstract}}
 
 <a href="{{ entry.url | relative_url }}" class="button float_right is-rounded has-text-centert is-dark {% if item.link == page.url %}is-active{% endif %}">
-    <span>Mehr lesen</span>
+    <span>{{ include.button | default:"Read more" }}</span>
     <span class="icon is-small">
     <i class="fas fa-chevron-right fa-xs"></i>
     </span>
