--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,3 +46,15 @@
         </div>
     </div>
 </nav>
+<section class="breadcrumb-section">
+    <div class="container">
+        <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
+            <ul>
+              <li><a href="#">Bulma</a></li>
+              <li><a href="#">Documentation</a></li>
+              <li><a href="#">Components</a></li>
+              <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
+            </ul>
+        </nav>
+    </div>
+</section>
