--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
     </div>
 </nav>
 <section class="breadcrumb-section">
-    <div class="container">
+    <div class="container breadcrumb-container">
         <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
             <ul>
               <li><a href="#">Bulma</a></li>
