--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -19,14 +19,20 @@ $dark: #09443e;
 @import "print";
 
 .breadcrumb-section {
-  top: 5.85rem;
-  position: fixed;
-  z-index: 30;
+  margin-top: 7.5rem;
+  // position: fixed;
+  //  z-index: 29;
   width: 100%;
+  background-color: white;
   border-top: 2px solid #1e7d73;
   border-bottom: 2px solid #1e7d73;
-  background-color: white;
 }
 .breadcrumb a {
   color: #1e7d73;
+}
+.navbar {
+  padding-bottom: 2.3rem;
+}
+.hero.is-medium .hero-body {
+  padding-top: 1rem;
 }
