--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,11 +50,17 @@
     <div class="container breadcrumb-container">
         <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
             <ul>
-              <li><a href="#">Bulma</a></li>
-              <li><a href="#">Documentation</a></li>
-              <li><a href="#">Components</a></li>
-              <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
+                {% assign crumbs = page.url | remove:'/index.html' | split: '/' %}
+                <li><a href="/">INTIA</a></li>
+                {% for crumb in crumbs offset: 1 %}
+                {% if forloop.last %}
+                <li><a href="#">{{ page.title }}</a></li>
+                {% else %}
+                <li><a href="{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' | replace:'without-plugin/','without-plugins/' }}{% endfor %}">{{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}</a></li>
+                {% endif %}
+                {% endfor %}
             </ul>
         </nav>
     </div>
 </section>
+
