--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1049,6 +1049,51 @@ div.faq {
   padding-bottom: 50px;
 }
 
+// Breadcrumbs
+.breadcrumb-section {
+  margin-top: 7.5rem;
+  // position: fixed;
+  //  z-index: 29;
+  width: 100%;
+  background-color: white;
+  border-top: 2px solid #1e7d73;
+  border-bottom: 2px solid #1e7d73;
+}
+.breadcrumb a {
+  color: #1e7d73;
+}
+.navbar {
+  padding-bottom: 2.3rem;
+}
+.hero.is-medium .hero-body {
+  padding-top: 1rem;
+}
+
+// Green version adopted
+.breadcrumb-section.green-version {
+  background-color: #e7f2ea;
+  border: 0;
+}
+.green-version .breadcrumb a {
+  color: #000;
+}
+.green-version .breadcrumb li + li::before {
+  color: #000;
+}
+
+// Dark-green adopted
+// Green version adopted
+.breadcrumb-section.dark-green-version {
+  background-color: #1e7d73;
+  border: 0;
+}
+.dark-green-version .breadcrumb a {
+  color: #ffffff;
+}
+.dark-green-version .breadcrumb li + li::before {
+  color: #ffffff;
+}
+
 // Mobil
 
 @include mobile {
