--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
         <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
             <ul>
             {% assign crumbs = page.url | remove:'/index.html' | split: '/' %}
-            <li><a href="/">INTIA</a></li>
+            <li><a href="/">{{ site.title }}</a></li>
             {% for crumb in crumbs offset: 1 %}
             {% if forloop.last %}
             <li><a href="#">{{ page.title }}</a></li>
