--- a/_sass/_helper.scss
+++ b/_sass/_helper.scss
@@ -4,6 +4,9 @@
 .fas {
   line-height: 2.25rem !important;
 }
+.invert{
+  filter: invert(100%);
+}
 .custom-icon {
   content: "";
   background: url(https://via.placeholder.com/48x48) no-repeat;
@@ -11,5 +14,15 @@
   display: block;
   width: 48px;
   height: 48px;
+  float: left;
+}
+.custom-button-icons {
+  content: "";
+  background: url(https://via.placeholder.com/48x48) no-repeat;
+  background-position: center center;
+  background-size: contain !important;
+  display: block;
+  width: 15px;
+  height: 15px;
   float: left;
 }
