--- a/_sass/_icons.scss
+++ b/_sass/_icons.scss
@@ -12,3 +12,10 @@
   background: url(/assets/img/icons/external.svg) no-repeat;
   transform: rotate(-90deg);
 }
+.icon-search:before {
+  @extend .custom-button-icons;
+  background: url(/assets/img/icons/search.svg) no-repeat;
+  width: 32px;
+  height: 32px;
+  filter: invert(35%) sepia(93%) saturate(355%) hue-rotate(124deg) brightness(93%) contrast(88%);
+}
