--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,26 @@
             </a>
         </div>
         <div class="navbar-menu" id="navMenu" :class="{ 'is-active': openNav }">
-            <div class="navbar-end buttons">
+            <div id="SearchOverlay" class="searchbar-overlay navbar-end buttons">
+                <div class="navbar-item searchbar">
+                    <div class="field">
+                        <div id="search-container" class="control">
+                          <input class="input search-input" type="text" id="search-input" placeholder="Suchbegriff eintippen">
+                        </div>
+                    </div>
+                    <ul id="results-container" class="search-result-list"></ul>
+                </div>
+                <div class="navbar-end">
+                    <div class="navbar-item navbar-search">
+                        <a id="closeSearch">
+                            <span class="icon">
+                                <i class="fa-solid icon-remove"></i>
+                            </span>
+                        </a>  
+                    </div>
+                </div>
+            </div>
+            <div id="navmenu" class="navbar-end buttons">
                 {% if site.data.navigation %}
                 {% for item in site.data.navigation %}
                 {% if item.dropdown %}
@@ -55,7 +74,6 @@
         </div>
     </div>
 </nav>
-
 {% unless page.hide_beadcrumb %}
 <section class="breadcrumb-section green-version">
     <div class="container breadcrumb-container">
@@ -91,20 +109,6 @@
 {% else %}
 {% endunless %}
 
-
-<div id="SearchOverlay" class="overlay">
-    
-    <div class="overlay-content">
-        
-        <div class="field">
-            <div id="search-container" class="control">
-              <input class="input" type="text" id="search-input" placeholder="Suchbegriff eintippen">
-            </div>
-        </div>
-        <span class="closebtn" id="closeSearch" title="Close Overlay">×</span>
-        <ul id="results-container"></ul>
-    </div>
-</div>
   <!-- Script pointing to search-script.js -->
   <script src="/assets/js/search.js" type="text/javascript"></script>
   
