add new link color

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -62,3 +62,18 @@ $dark: #09443e;
 .dark-green-version .breadcrumb li + li::before {
   color: #ffffff;
 }
+a:link {
+  color: #1E7D73;
+}
+
+a:visited {
+  color: #1E7D73;
+}
+
+a:hover {
+  color: #77B9A5;
+}
+
+a:active {
+  color: #1E7D73;
+}
