--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,19 +5,20 @@
 @import "../node_modules/bulma-block-list/src/block-list.scss";
 @import "../node_modules/@creativebulma/bulma-tooltip/src/sass/index.sass";
 // Bulma Config
-$column-gap: 1rem;
+$column-gap: 16px;
 $modal-content-width: 800px;
 $tabs-link-active-color: $primary;
 $tabs-link-active-border-bottom-color: $primary;
 // Global
+//:root {
+//  font-size: 24px;
+//  line-height: 1.5rem;
+//}
 html {
   scroll-behavior: smooth;
+  font-size: 24px;
+  line-height: 1.5rem;
 }
-body {
-  font-size: 1.5rem;
-  line-height: 2.25rem;
-}
-
 h1,
 h2,
 h3,
@@ -29,38 +30,34 @@ h2 {
   padding-top: 90px;
 }
 
-.card h1,
-.card h2,
-.card p,
-.slider h1,
-.slider h2,
-.slider p {
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
 h1,
 h1 p {
-  font-size: 48px;
-  line-height: 72px;
+  font-size: 2rem;
+  line-height: 3rem;
   font-weight: 600;
   text-align: center;
 }
+.turquoise {
+  color: $primary-dark;
+}
+h2,
+h2 p {
+  @extend h1;
+  font-weight: 400;
+}
+h3,
+h3 p {
+  @extend h2;
+  text-align: left;
+}
 
+// Should be replaced
 .green h1,
 .green h1 p {
   text-align: left;
 }
 
-h2,
-h2 p {
-  font-size: 36px;
-  font-weight: 600;
-  text-align: left;
-  background-repeat: no-repeat;
-  background-size: auto 35px;
-  font-family: "Verdana", sans-serif;
-}
+
 
 h3 {
   font-weight: 600;
@@ -74,6 +71,8 @@ h4 {
 
 h5 {
   font-size: 0.83rem;
+  text-align: center;
+  text-transform: uppercase;
 }
 ul {
   list-style-type: disc;
@@ -94,10 +93,19 @@ a:hover {
 a:active {
   color: #1E7D73;
 }
+.card h1,
+.card h2,
+.card p,
+.slider h1,
+.slider h2,
+.slider p {
+  padding-top: 0;
+  padding-bottom: 0;
+}
 // Button Animation + Gleiche Breite
 .button {
   // Schrifft
-  font-size: 1.31rem !important;
+  font-size: 0.667rem !important;
   font-weight: 600;
   // Animation
   transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -194,8 +202,14 @@ a:active {
 }
 // Search 
 .navbar-search{
-  padding-left: 0.75rem !important;
-  padding-top: 0.5rem !important;
+  padding: 0px !important;
+  height: 47px;
+  margin-bottom: 12px;
+}
+.navbar-search .icon {
+  height: 32px;
+  width: 32px;
+  vertical-align : middle;
 }
 //Search overlay
 .searchbar .field{
@@ -305,14 +319,6 @@ div.highlight {
   overflow: hidden;
 }
 
-.highlighter {
-  background-color: $light;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 5%;
-  border-radius: 65px;
-  margin-top: 3em;
-}
 .overtitle {
   margin-bottom: 0 !important;
   padding-bottom: 0 !important;
@@ -381,7 +387,7 @@ a .tooltip-popup {
 
 // Navi
 .navbar {
-  padding-top: 0.6rem;
+  padding-top: 10px;
 }
 
 .navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
@@ -390,8 +396,8 @@ a .tooltip-popup {
 }
 
 .navbar-brand img {
-  max-height: 3rem;
-  margin-top: 1rem;
+  max-height: 48px;
+  margin-top: 16px;
 }
 
 .navbar-brand a p {
@@ -702,6 +708,8 @@ figcaption {
   border-radius: 65px;
   padding: 75px;
   font-size: 1.4rem;
+  margin-top: 3em;
+  margin-bottom: 3em;
 }
 
 .min-height25p {
@@ -1101,8 +1109,11 @@ div.faq {
 }
 
 // Breadcrumbs
+.breadcrumb {
+  font-size: 0.667rem;
+}
 .breadcrumb-section {
-  margin-top: 7.5rem;
+  margin-top: 120px;
   // position: fixed;
   //  z-index: 29;
   width: 100%;
@@ -1200,7 +1211,7 @@ div.faq {
     font-size: 0.83rem;
   }
   .navbar {
-    padding-top: 0.6rem;
+    padding-top: 10px;
   }
   .navbar-brand img {
     margin: 1rem;
